# budget_2024

./: .gitignore  LICENSE  README.md  outline.md  pyproject.toml  requirements.txt  run.py
budget/: __init__.py  app.py  calc.py  config.py  models.py  routes.py
budget/static/css/: style.css
budget/static/js/: main.js
budget/templates/: index.html  overview.html  savings.html
budget/templates/errors/: 404.html  500.html  error.html
tests/: test.py  test_app.py  test_calc.py  test_models.py  tests.js
