[tool.poetry]
name = "Budget-project"
version = "0.1.0"
description = "A home budget system."
authors = ["Barrett Smits <barrett.smits@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.25.1"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
